--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -21,6 +21,7 @@ html{
 body{
     font-size: 1.5rem;
 }
+
 li{
     list-style: none;
 }
@@ -52,12 +53,18 @@ nav {
   border: 0.1rem solid var(--extra-lighter);
   border-radius: 0rem;
   box-shadow: 5px 15px 30px #2e2e2e;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: #ffffff;
+  
 }
 
 .nav__logo {
   justify-content:baseline;
   margin: 0px 0px;
-  width: 250px;
+  padding-left: 35px;
+  width: 350px;
   cursor: pointer;
 }
 
@@ -65,9 +72,12 @@ nav {
     list-style: none;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
     gap: 2rem;
+}
+
+.nav__menu :nth-child(3){
+    opacity: 0;
 }
 
 
@@ -86,6 +96,11 @@ nav {
 }
 
 @media screen and (max-width:768px){
+
+    nav{
+        width: auto;
+    }
+
     .nav__toggler{
         display: block;
     }
@@ -93,13 +108,38 @@ nav {
         position: fixed;
         top: 10vh;
         right: 0;
-        width: 100%;
-        height: 8vh;
-        background-color: #858686;
-        flex-direction: row;
+        width: 50%;
+        height: 20vh;
+        background-color: #ffffff;
+        flex-direction: column;
         transform: translateX(100%);
         transition: 0.5s ease-in;
     }
+
+
+    .nav__active{
+        left: 100px;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        
+    }
+
+    .nav__active a{
+        font-size: 30px;
+        font-weight: 700;
+        
+    }
+
+    .nav__menu :nth-child(3){
+    opacity: 1;
+}
+    .log {
+        font-size: 40px;
+        font-weight: 600;
+    }
+
+
 }
 
 /* Nav active */
