--- a/src/components/Near You/NearU.css
+++ b/src/components/Near You/NearU.css
@@ -30,7 +30,8 @@
   
   position: relative;
   overflow: hidden;
-  transition: transform 0.3s ease-in-out;
+  border: 0.2rem solid #d00000;
+  /* transition: transform 0.3s ease-in-out; */
 }
 
 .image-box a {
@@ -38,16 +39,17 @@
   position: relative;
   
   margin-top: 20px;
-  margin-bottom:20px;}
+  margin-bottom:20px;
+  
+}
 
 .image-box img {
-  width: 100%;
+  width: 98%;
   
   margin-top: 0%;
-  bottom: 30px;
+  /* bottom: 30px; */
   height: 200px;
   display: block;
-  border: #2E2E2E;
 }
 
 .image-box::before {
@@ -57,7 +59,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to top, #858686, #d00000);
+  /* background: linear-gradient(to top, #858686, #d00000); */
+  border: 0.1rem solid #2E2E2E;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
@@ -84,7 +87,7 @@
   text-align: center;
   border: 0.2rem solid #d00000;
   color: #2E2E2E;
-  border-radius: 4px;
+  
   font-size: 14px;
   font-weight: 600;
 }
